--- a/package.json
+++ b/package.json
@@ -106,8 +106,8 @@
     "jest": "jest",
     "lint:js": "eslint --ignore-path .gitignore --ext .js,.jsx .",
     "lint:other": "yarn prettier --list-different",
-    "lint:ts": "tslint --project tsconfig.json \"electron/**/*.ts\"",
-    "lint:ts:tools": "tslint --project tsconfig.json \"bin/**/*.ts\"",
+    "lint:ts": "tslint --project tsconfig.json",
+    "lint:ts:tools": "tslint --project tsconfig.tools.json",
     "lint": "yarn lint:js && yarn lint:other && yarn lint:ts",
     "postinstall": "yarn configure && cd electron && yarn",
     "prestart": "yarn build:ts && yarn bundle:dev",
