--- a/tsconfig.tools.json
+++ b/tsconfig.tools.json
@@ -1,10 +1,7 @@
 {
   "compilerOptions": {
-    "declaration": false,
     "lib": ["esnext"],
-    "noEmit": true,
-    "rootDir": "bin",
-    "sourceMap": false
+    "rootDir": "bin"
   },
   "exclude": [],
   "include": ["bin"],
