--- a/package.json
+++ b/package.json
@@ -106,10 +106,10 @@
     "configure": "copy-config",
     "fix:js": "yarn lint:js --fix",
     "fix:other": "yarn prettier --write",
-    "fix": "yarn fix:js && yarn fix:other && yarn fix:ts && yarn fix:ts:tests",
-    "fix:ts": "yarn lint:ts --fix && yarn lint:ts:tools --fix",
+    "fix": "yarn fix:js && yarn fix:other && yarn fix:ts && yarn fix:ts:tests && yarn fix:ts:tools",
+    "fix:ts": "yarn lint:ts --fix",
     "fix:ts:tests": "yarn lint:ts:tests --fix",
-    "jest": "jest",
+    "fix:ts:tools": "yarn lint:ts:tools --fix",
     "lint": "yarn lint:js && yarn lint:other && yarn lint:ts && yarn lint:ts:tests && yarn lint:ts:tools",
     "lint:js": "eslint --ignore-path .gitignore --ext .js,.jsx .",
     "lint:other": "yarn prettier --list-different",
