--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/jest": "24.0.11",
     "@types/jszip": "3.1.5",
     "@wireapp/copy-config": "0.5.2",
+    "@wireapp/deploy-tools": "0.1.0",
     "aws-sdk": "2.428.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
@@ -52,7 +53,6 @@
     "rimraf": "2.6.3",
     "sinon": "7.3.1",
     "style-loader": "0.23.1",
-    "ts-node": "8.0.3",
     "tslint": "5.14.0",
     "tslint-config-prettier": "1.18.0",
     "tslint-plugin-prettier": "2.0.1",
