--- a/electron/package.json
+++ b/electron/package.json
@@ -39,7 +39,8 @@
     "@types/fs-extra": "5.0.5",
     "@types/lodash": "4.14.123",
     "@types/minimist": "1.2.0",
-    "@types/node": "11.11.8",
+    "@types/mocha": "5.2.6",
+    "@types/node": "11.12.2",
     "@types/open-graph": "0.2.0",
     "@types/raygun": "0.10.1",
     "@types/sinon": "7.0.11",
